Update: added eval and toString support for the log function to handle one or two arguments